--- a/README
+++ b/README
@@ -5,6 +5,7 @@ Programming language is Lua.
 Some aspects and files will only be functional on Roblox Studio, as it has special functions and objects.
 
 Roblox Game Link: https://www.roblox.com/games/91100180965981/Xscape -- COPY AND PASTE THIS INTO YOUR BROWSER'S SEARCH BAR; YOU MUST HAVE ROBLOX DOWNLOADED AND HAVE A ROBLOX ACCOUNT TO PLAY THIS ROBLOX GAME!
+There is a maximum server size of 3 players.
 
 -- File Inspecting
 TO DO THE FOLLOWING, YOU MUST DOWNLOAD ROBLOX STUDIO AND HAVE A ROBLOX ACCOUNT (Download Roblox as well if you want to play Xscape, our Roblox game.)
